# PEP440-Checker

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: test.yml
pep440_checker/: main.py
pep440_checker/css/: index.css
pep440_checker/js/: comply.js
